# grill-me-sleek

./: .dockerignore  .gitignore  .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  LICENSE  README.md  README_zh.md  package.json  pyproject.toml
.agents/skills/commit/: SKILL.md
.agents/skills/release/: SKILL.md
.claude-plugin/: marketplace.json  plugin.json
.claude/skills/grill-me-sleek/: SKILL.md  server.py
.claude/skills/grilling-sleek/: SKILL.md  grill.js
.claude/skills/release/: SKILL.md
.codex/: hooks.json
.github/workflows/: ci.yml  e2e.yml  load-test.yml  release.yml
.zcode/skills/commit/: SKILL.md
cli/: README.md  esbuild.config.mjs  eslint.config.js  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json
cli/scripts/: publish-local.py
cli/src/: api.ts  config.ts  grill.ts  grilling-sleek.ts  logger.ts
cli/tests/: cli_smoke.sh  config.test.ts
devops/ansible/: hosts.yml  production.yml
devops/ansible/templates/production/: Caddyfile.j2  docker-compose.yml.j2
devops/ansible/vars/production/: vault.yml
docker/: Caddyfile  Caddyfile.http  Dockerfile  build-frontend.sh  build.py  docker-compose.selfhost.yml
docker/s6/cont-init.d/: 01-setup.sh
docker/s6/s6-rc.d/backend/: run
docker/s6/s6-rc.d/caddy/: run
e2e/: Caddyfile  MANUAL.md  docker-compose.e2e.yml  global-setup.ts  global-teardown.ts  package.json  playwright.config.ts  pnpm-lock.yaml  probe.mjs  tsconfig.json
e2e/fixtures/: data.ts  index.ts  pom.ts
e2e/pages/: BasePage.ts  Controls.ts  QuestionsPage.ts  TerminalPage.ts
e2e/specs/: cli-behavior.spec.ts  edge-cases.spec.ts  error-handling.spec.ts  multi-round.spec.ts  session-lifecycle.spec.ts  sse.spec.ts  user-interaction.spec.ts
e2e/utils/: cli.ts  db.ts  docker.ts  shared.ts
scripts/: sync-version.py
server/: Cargo.toml
server/.sqlx/: query-019c60dd1c129745aab9aeb0cfd12b1cd1aef1100c5640e64e4aa9ea495d25b9.json  query-0991feddff1faf29fb32cc57a78dc2c948926fee4b6e78a40c8e2f03ef6468ae.json  query-117a314d5c40c50869a6ab9a718597bd01ee6fba14873c383a403873b92ea933.json  query-237b93e2e45108568152ba7a65fa882bb20729b4be07af24e5e4da37fd5c8554.json  query-2bbd64343d3a9681ad3fc9c2dff87d0d9c055f38d7a2a10afcf5d4aebdf40f88.json  query-34fbafcd5aa8a2523494f3356f0ef25ed73f8c5843bdab46206ac9e10d49c03a.json  query-551546dfe7bca3a92eb28657f52a289f27fa0df6c5074043cd777d7545ec65fc.json  query-64061c833e3c2b18679439f442007901438e98c4a063a086729272de0d9789bd.json  query-713fd357c144a377a4dd95974c52943cc4a3acf6d519ccb6699ed04db33aa597.json  query-718b607219c7a2eb2e603ebe075466c2827c1ab5ac2c1a2ea0a4336791d3ef1a.json  query-7c22aed4bbfbf5deff375f0cd5702b6292cae40b9c879fe713841349d00d6d6d.json  query-9c94b29114c3ffa8133a1fc7d7225c379a65ba106565ddfd4dd16e9d10370485.json  query-9ce5a8eaab4528a4b3ee01db19541bd442d99c903da2a3660acccf1a278582c4.json  query-bb95694644a6156754a4fec442af5e877c7c3f768814b2a12307ecdeaeed53ee.json  query-cb87f58abffa8fb19f9f18f8dc6f9bf880a9d0dab6ae7057bf633a4db8fc0282.json  query-d479c9229ec205c405f7292313689c58d7813b52c282c00cf6939610e2dd0bb5.json  query-d9dafe11fddb6c34691ccd2383df8c1bd2c3298b7e2e15032fba746e8611d485.json  query-e9e99cbf037a6d071232574a7bd76542ca61ba97f93639e409ea83e0b3afab26.json  query-f94309c8a244a41e121c7cbd3fe2a24b9eb0e384b864c3744b070c5cad04ae33.json
server/deploy/: Caddyfile  Dockerfile  grilling-sleek.service
server/docs/: openapi.json  openapi.yaml
server/migrations/: 20260712000000_init.sql
server/schemas/: response.json  response_input.json
server/src/: config.rs  extractors.rs  lib.rs  main.rs  validation.rs
server/src/db/: mod.rs
server/src/error/: mod.rs
server/src/handlers/: mod.rs  response.rs  rounds.rs  sessions.rs  sse.rs
server/src/idempotency/: mod.rs
server/src/models/: mod.rs  tests.rs
server/src/observability/: exporters.rs  metrics.rs  mod.rs
server/src/session/: mod.rs
server/src/sse/: mod.rs
server/tests/: integration.rs  smoke.sh  unit_schema.rs  unit_state_machine.rs
server/tests/common/: mod.rs
skills/grill-me-sleek/: SKILL.md  server.py  template.html
skills/grilling-sleek/: README.md  SKILL.md  grill.js
skills/grilling-sleek/schemas/: grilling.json
specs/: configuration.md  e2e.md  rust-guidelines.md  validation.md
tests/: test_smoke.py
tests/load/: core-flow.js  extreme-500vu.js
web/: .gitignore  DESIGN.md  eslint.config.js  index.html  package-lock.json  package.json  pnpm-lock.yaml  tsconfig.json  vite.config.ts
web/src/: App.tsx  app.ts  i18n.ts  main.tsx  styles.css  theme.ts  types.ts
web/src/components/: Banner.tsx  Controls.tsx  MultiControl.tsx  QuestionCard.tsx  SingleControl.tsx  SingleControl.tsx.backup  TerminalPage.tsx  TextControl.tsx
web/src/hooks/: useGrillingMachine.ts  useI18n.ts  useSSE.ts  useSubmit.ts  useTheme.ts
web/src/i18n/: index.ts
web/src/lib/: api.ts  schemas.ts
web/src/pages/: QuestionsPage.tsx  QuestionsPage.tsx.backup
web/src/styles/: globals.css
web/tests/: machine.test.ts  schemas.test.ts
web/tests/components/: Controls.test.tsx  MultiControl.test.tsx  QuestionCard.test.tsx  QuestionsPage.test.tsx  SingleControl.test.tsx
(+4 files in other folders)
