[project]
name = "grill-me-sleek"
version = "0.1.1"
description = "Stress-test your plan before vibe coding — Claude Code skill"
readme = "README.md"
requires-python = ">=3.12"
license = "MIT"

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.11",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["skills/grill-me-sleek"]

[tool.ruff]
target-version = "py312"
exclude = [".*"]

[tool.ruff.lint]
select = [
    "I",       # isort
    "UP",      # pyupgrade
    "B",       # flake8-bugbear
    "PLC0415", # import-outside-toplevel
]
